2010-04-19 ckuhl <ckuhl@ipb-halle.de>
	* Last changes for the next BioC release
	* Rewrite of the vignette
2010-03-17 ckuhl <ckuhl@ipb-halle.de>
	* Hugh changes in CAMERA for working with multiple sample
	* Add check constrains in groupCorr for isotopes and primary adducts
2009-11-24 ckuhl <ckuhl@ipb-halle.de>
        * Add experimental parallel mode with MPI
2009-11-20 ckuhl <ckuhl@ipb-halle.de>
        * Fix bug in setting ruletable
2009-08-26 ckuhl <ckuhl@ipb-halle.de>
        * add nSlaves as argument to findAdducts (for parallel annotation with MPI)
2009-08-24 ckuhl	<ckuhl@ipb-halle.de>
	* small bugfixes in getPeaklist
	* add neutral losses to rule set
2009-08-12 Steffen Neumann <sneumann@@ipb-halle.de>
	* Fixed plotEICs for 1 peak groups
2009-08-04 ckuhl	<ckuhl@ipb-halle.de>
	* Add ips Score to annoGrp
2009-06-03 Steffen Neumann <sneumann@@ipb-halle.de>
        * Add adduct labels to plotPeaks()
        * Add adduct labels to plotEICs()
2009-05-22 Steffen Neumann <sneumann@@ipb-halle.de>
        * Add first visualisation function plotEICs() and plotPeaks()
2009-05-06 ckuhl    <ckuhl@ipb-halle.de>
        * bump for devel 2.5
2009-03-30 ckuhl    <ckuhl@ipb-halle.de>
        * add combine_xsanno
        * small refactoring
        * changes in scoring schemata
2009-03-18 ckuhl	<ckuhl@ipb-halle.de>
	* after groupCorr every peak is now member of a group
        * bugfix: remove xM-xH clones
        * remove dependency on Hmisc
2009-03-10 ckuhl	<ckuhl@ipb-halle.de>
	* speed-up of findAdducts
2009-02-24 ckuhl        <ckuhl@ipb-halle.de>
        * refactoring findAdducts
        * add methods for pos/neg polarity comparison
2009-02-20 ckuhl        <ckuhl@ipb-halle.de>
        * replace na.omit with naOmit
2009-02-18 ckuhl	<ckuhl@ipb-halle.de>
	* add neutral losses into ruleset
	* other bugfixes
2009-01-19 ckuhl	<ckuhl@ipb-halle.de>
	* Change isotope nomination
	* add lists for fragments, ions and neutral losses
2008-10-15  ckuhl	<ckuhl@ipb-halle.de>