@@ -1,3 +1,5 @@
+2010-04-20 ckuhl <ckuhl@ipb-halle.de>
+        * Fix bug in annotate function
 2010-04-19 ckuhl <ckuhl@ipb-halle.de>
 	* Last changes for the next BioC release
 	* Rewrite of the vignette
